
 - The scene graph now requires a call to QSGNode::markDirty() with the
   flag QSGNode::DirtySubtreeBlocked whenever the state of
   QSGNode::isSubtreeBlocked() is changed.

 - When assigning double precision floating point values to integer properties,
   the engine now truncates instead of rounding. This is consistent with the
   ECMAScript specification's way of converting doubles to ints.

****************************************************************************
*                          Library                                         *
****************************************************************************

QtQml
------

- New class QQmlFileSelectors allows applying a QFileSelector to QML assets
  and types. One is automatically set on QQmlApplicationEngines from now on,
  plain QQmlEngines must set their own in order to be affected.

QtQuick
------

- New scene graph renderer should reduce state changes, number of draw calls,
  CPU->GPU bandwidth and generally improve performance.

- Textures in the scene graph can now be entered into an atlas, facilitating
  in better batching in the renderer. Atlas textures are enabled by passing
  QQuickWindow::TextureCanUseAtlas to QQuickWindow::createTextureFromImage()

****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************

