@@ -722,8 +722,8 @@ Bool __qmljs_strict_equal(const ValueRef x, const ValueRef y)
 
     if (x->isNumber())
         return y->isNumber() && x->asDouble() == y->asDouble();
-    if (x->isString())
-        return y->isString() && x->stringValue()->isEqualTo(y->stringValue());
+    if (x->isManaged())
+        return y->isManaged() && x->managed()->isEqualTo(y->managed());
     return false;
 }
 
