@@ -46,6 +46,13 @@ Third party components
    the engine now truncates instead of rounding. This is consistent with the
    ECMAScript specification's way of converting doubles to ints.
 
+ - Comparing value based types with the JS strictly equal operator will
+   now behave similar to the corresponding C++ == operator. Ie. two
+   QPoints exposed on the JS side will be strictly equal if their values
+   are equal. This brings the behavior of value based types in JS closer
+   to what one would expect and more inline with primitive values in 
+   Javascript.
+
 ****************************************************************************
 *                          Library                                         *
 ****************************************************************************
